# ccxtr

./: Cargo.toml  README.md
examples/: create_order.rs  exchange.rs  order_book.rs  trades.rs
src/: client.rs  error.rs  lib.rs  macros.rs  model.rs  prelude.rs  util.rs
src/exchange/: mod.rs  params.rs  property.rs  unifier.rs
src/exchange/binance/: binance.rs  margin.rs  mod.rs  usdm.rs  util.rs
src/util/: channel.rs  collections.rs  mod.rs
