[package]
name = "ccxtr"
version = "0.0.0"
edition = "2021"
license = "MIT"
description = "CryptoCurrency eXchange Trading library in Rust"
homepage = "https://github.com/ccxtrs/ccxtr/"
documentation = "https://github.com/ccxtrs/ccxtr/"
repository = "https://github.com/ccxtrs/ccxtr/"
readme = "README.md"

[dependencies]
async-trait = "0.1.68"
reqwest = { version = "0.11.17", features = ["rustls-tls", "json"] }
rust_decimal = "1.29.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.96"
thiserror = "1.0.40"
tokio = { version = "1.28.0", features = ["full"] }
