[package]
name = "ccxtr"
version = "0.0.0"
edition = "2021"
license = "MIT"
description = "CryptoCurrency eXchange Trading library in Rust"
homepage = "https://github.com/ccxtrs/ccxtr/"
documentation = "https://github.com/ccxtrs/ccxtr/"
repository = "https://github.com/ccxtrs/ccxtr/"
readme = "README.md"

[dependencies]
async-trait = "0.1.68"
chrono = "0.4.24"
derive_builder = "0.12.0"
flume = { version = "0.11.0", default-features = false, features = ["async"] }
futures-util = "0.3.28"
hex = "0.4.3"
hmac = "0.12.1"
reqwest = { version = "0.11.17", features = ["rustls-tls", "json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.96"
sha2 = "0.10.7"
thiserror = "1.0.40"
tokio = { version = "1.28.0", features = ["full"] }
tokio-stream = "0.1.14"
tokio-tungstenite = { version = "0.19.0", features = ["default", "rustls-tls-webpki-roots"] }
